[package]
name = "error-test-sinks"
description = "Sink implementations for testing that simulate different types of errors"
readme = "README.md"
version = "0.1.1"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/error-test-sinks"
repository = "https://github.com/paulkernfeld/error-test-sinks"

[dependencies]
futures  = "0.1"
